--- a/src/GenerativeAI/GenerativeAI.csproj
+++ b/src/GenerativeAI/GenerativeAI.csproj
@@ -9,15 +9,15 @@
 	  <Title>Unofficial Google GenerativeAI (Gemini) SDK</Title>
 	  <Authors>Gunpal Jain</Authors>
       <Company>Argentron Technologies</Company>
-      <PackageIcon>package-icon.jpg</PackageIcon>
+      <PackageIcon>favicon.png</PackageIcon>
 	  <Description>Unofficial C# Google Generative AI SDK (Google Gemini) with function calls support</Description>
 	  <PackageProjectUrl>https://github.com/gunpal5/Google_GenerativeAI</PackageProjectUrl>
 	  <PackageReadmeFile>README.md</PackageReadmeFile>
 	  <RepositoryUrl>https://github.com/gunpal5/Google_GenerativeAI</RepositoryUrl>
 	  <PackageTags>Gemini,Google,GenerativeAI,GoogleGemini.Net,Google,Gemini,Gemini .Net,GoogleGemini,GenerativeAI .Net,Vertex AI</PackageTags>
-	  <Version>2.4.8</Version>
-	  <AssemblyVersion>2.4.8</AssemblyVersion>
-	  <FileVersion>2.4.8</FileVersion>
+	  <Version>2.5.1</Version>
+	  <AssemblyVersion>2.5.1</AssemblyVersion>
+	  <FileVersion>2.5.1</FileVersion>
 	  <SignAssembly>True</SignAssembly>
 	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   
@@ -28,7 +28,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
-      <None Include="..\..\package-icon.jpg" Pack="True" PackagePath="" />
+      <None Include="..\..\favicon.png" Pack="True" PackagePath="" />
   </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0'">
