--- a/samples/JavascriptCodeExecutor/JavascriptCodeExecutor.csproj
+++ b/samples/JavascriptCodeExecutor/JavascriptCodeExecutor.csproj
@@ -9,8 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google_GenerativeAI.Tools" Version="2.4.2" />
+    <PackageReference Include="Google_GenerativeAI.Tools" Version="2.5.0" />
     <PackageReference Include="Jint" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
