--- a/samples/SemanticRetrievalDemo/SemanticRetrievalDemo.csproj
+++ b/samples/SemanticRetrievalDemo/SemanticRetrievalDemo.csproj
@@ -10,8 +10,10 @@
     <ItemGroup>
       <PackageReference Include="Bogus" Version="35.6.1" />
       <PackageReference Include="DocumentChunker" Version="1.0.0" />
-      <PackageReference Include="Google_GenerativeAI" Version="2.0.14" />
+      <PackageReference Include="Google_GenerativeAI" Version="2.4.7" />
       <PackageReference Include="Google_GenerativeAI.Auth" Version="2.0.14" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.3" />
     </ItemGroup>
 
 </Project>
