--- a/samples/WebAppIntegration/WebIntegration/WebIntegration.csproj
+++ b/samples/WebAppIntegration/WebIntegration/WebIntegration.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google_GenerativeAI.Web" Version="2.0.11" />
+    <PackageReference Include="Google_GenerativeAI.Web" Version="2.5.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
