--- a/src/GenerativeAI.Live/GenerativeAI.Live.csproj
+++ b/src/GenerativeAI.Live/GenerativeAI.Live.csproj
@@ -50,6 +50,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
       <PackageReference Include="Websocket.Client" Version="5.1.2" />
     </ItemGroup>
 
