--- a/src/GenerativeAI.Web/GenerativeAI.Web.csproj
+++ b/src/GenerativeAI.Web/GenerativeAI.Web.csproj
@@ -25,32 +25,32 @@
         <ProjectReference Include="..\GenerativeAI.Auth\GenerativeAI.Auth.csproj" />
         <ProjectReference Include="..\GenerativeAI\GenerativeAI.csproj"/>
     </ItemGroup>
-    <ItemGroup>
-     
-    </ItemGroup>
 
     <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0'">
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.2" />      
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />      
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.1" />
     </ItemGroup>
     <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0'">
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.2" />       
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />       
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.1" />
     </ItemGroup>
     <ItemGroup Condition=" '$(TargetFramework)' == 'net7.0'">
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />       
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />       
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     </ItemGroup>
     <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0'">
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />       
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />       
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     </ItemGroup>
     <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.2" />     
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />     
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.1" />
     </ItemGroup>
     <ItemGroup>
         <None Include="..\..\favicon.png" Pack="True" PackagePath="" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
     </ItemGroup>
 
 </Project>
