--- a/src/GenerativeAI.Microsoft/GenerativeAI.Microsoft.csproj
+++ b/src/GenerativeAI.Microsoft/GenerativeAI.Microsoft.csproj
@@ -32,7 +32,7 @@
       <ProjectReference Include="..\GenerativeAI\GenerativeAI.csproj" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.AI" Version="9.5.0-preview.1.25262.9" />
+      <PackageReference Include="Microsoft.Extensions.AI.Abstractions" Version="9.5.0" />
     </ItemGroup>
 
 </Project>
