--- a/samples/TwoWayAudioCommunicationWpf/TwoWayAudioCommunicationWpf.csproj
+++ b/samples/TwoWayAudioCommunicationWpf/TwoWayAudioCommunicationWpf.csproj
@@ -7,7 +7,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
         <EnableWindowsTargeting>true</EnableWindowsTargeting>
-       
+        <NoWarn>$(NoWarn);NU1701</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
