--- a/tests/GenerativeAI.SemanticRetrieval.Tests/GenerativeAI.SemanticRetrieval.Tests.csproj
+++ b/tests/GenerativeAI.SemanticRetrieval.Tests/GenerativeAI.SemanticRetrieval.Tests.csproj
@@ -14,6 +14,10 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="Shouldly" Version="4.2.1" />
+        <PackageReference Include="xunit.analyzers" Version="1.23.0">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="xunit.v3" Version="1.1.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
