--- a/tests/GenerativeAI.Web.Tests/GenerativeAI.Web.Tests.csproj
+++ b/tests/GenerativeAI.Web.Tests/GenerativeAI.Web.Tests.csproj
@@ -15,6 +15,10 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
         <PackageReference Include="Shouldly" Version="4.2.1" />
+        <PackageReference Include="xunit.analyzers" Version="1.23.0">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="xunit.v3" Version="1.1.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
           <PrivateAssets>all</PrivateAssets>
