--- a/tests/GenerativeAI.Microsoft.Tests/GenerativeAI.Microsoft.Tests.csproj
+++ b/tests/GenerativeAI.Microsoft.Tests/GenerativeAI.Microsoft.Tests.csproj
@@ -10,18 +10,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Bogus" Version="35.6.1" />
-        <PackageReference Include="Microsoft.Extensions.AI" Version="9.8.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0-preview-25107-01" />
-        <PackageReference Include="xunit.analyzers" Version="1.23.0">
+        <PackageReference Include="Bogus" Version="35.6.4" />
+        <PackageReference Include="Microsoft.Extensions.AI" Version="9.10.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
+        <PackageReference Include="xunit.analyzers" Version="1.24.0">
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="xunit.v3" Version="1.1.0" />
+        <PackageReference Include="xunit.v3" Version="3.1.0" />
     </ItemGroup>
 
     <ItemGroup>
