--- a/src/GenerativeAI.Live/GenerativeAI.Live.csproj
+++ b/src/GenerativeAI.Live/GenerativeAI.Live.csproj
@@ -51,8 +51,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
-      <PackageReference Include="Websocket.Client" Version="5.1.2" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
+      <PackageReference Include="Websocket.Client" Version="5.3.0" />
+      <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
