--- a/src/GenerativeAI.Tools/GenerativeAI.Tools.csproj
+++ b/src/GenerativeAI.Tools/GenerativeAI.Tools.csproj
@@ -33,6 +33,7 @@
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="CSharpToJsonSchema" Version="3.10.2-dev.39" />
+      <PackageReference Include="ModelContextProtocol" Version="0.4.0-preview.3" />
       <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
