--- a/src/GenerativeAI.Tools/GenerativeAI.Tools.csproj
+++ b/src/GenerativeAI.Tools/GenerativeAI.Tools.csproj
@@ -38,6 +38,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="ModelContextProtocol.Core" Version="0.4.0-preview.3" />
     </ItemGroup>
 
 </Project>
