--- a/src/GenerativeAI.Tools/GenerativeAI.Tools.csproj
+++ b/src/GenerativeAI.Tools/GenerativeAI.Tools.csproj
@@ -18,9 +18,9 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/gunpal5/Google_GenerativeAI</RepositoryUrl>
         <PackageTags>GenerativeAI,Google,Gemini,Tools,SDK,GoogleGemini.Net,Google,Gemini,Gemini.Net</PackageTags>
-        <Version>3.5.1</Version>
-        <AssemblyVersion>3.5.1</AssemblyVersion>
-        <FileVersion>3.5.1</FileVersion>
+        <Version>3.5.0</Version>
+        <AssemblyVersion>3.5.0</AssemblyVersion>
+        <FileVersion>3.5.0</FileVersion>
         <SignAssembly>True</SignAssembly>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <NoWarn>NU5104</NoWarn>
@@ -32,7 +32,7 @@
       <ProjectReference Include="..\GenerativeAI\GenerativeAI.csproj" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="CSharpToJsonSchema" Version="3.10.2-dev.39" />
+      <PackageReference Include="Gunpal5.CSharpToJsonSchema" Version="1.0.0" />
       <PackageReference Include="ModelContextProtocol" Version="0.4.0-preview.3" />
       <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39">
         <PrivateAssets>all</PrivateAssets>
