--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,14 @@
 name: Publish Nuget Packages
-on: 
+on:
   workflow_dispatch:
-   
 
 jobs:
-  update:
+  build-test-publish:
+    name: Build, Test & Publish
     runs-on: ubuntu-latest
     outputs:
-      new_version: ${{ steps.update.outputs.oldVersion }}
-    permissions:                      
-        contents: write           
-        pull-requests: write   
-    name: Updating Version
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set project versions
-        id: update
-        uses: vers-one/dotnet-project-version-updater@v1.7
-        with:
-          file: |
-            "**/*.csproj", "**/*.nuspec", "**/AssemblyInfo.cs"
-          version: bump-build
-
-      - run: |
-          git config user.name "Gunpal Jain"
-          git config user.email "gunpal5@gmail.com"
-          git add .
-          git commit -m "Bump version to v${{ steps.update.outputs.newVersion }}"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            branch: ${{ github.ref }}
-  build-test-publish:
-    name: Publishing
-    needs: [update]
+      new_version: ${{ steps.update.outputs.newVersion }}
     permissions: write-all
-    uses: gunpal5/workflows/.github/workflows/dotnet_build-test-publish.yml@main
-    secrets:
-      nuget-key: ${{ secrets.NUGET_KEY }}
-    with:
-      generate-build-number: false
-      create-release: true
-      publish: true
-      project-version: ${{ needs.update.outputs.new_version }}
-
-  publish-github-packages:
-    name: Publish to GitHub Packages
-    needs: [build-test-publish]
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -63,11 +18,65 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: Build and Pack
-        run: dotnet pack -c Release -o ./nupkgs
+      - name: Bump version (local only)
+        id: update
+        uses: vers-one/dotnet-project-version-updater@v1.7
+        with:
+          file: |
+            "**/*.csproj", "**/*.nuspec", "**/AssemblyInfo.cs"
+          version: bump-build
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build
+        run: dotnet build -c Release --no-restore
+
+      - name: Test
+        run: dotnet test -c Release --no-build --verbosity normal
+        continue-on-error: true
+
+      - name: Pack
+        run: dotnet pack -c Release --no-build -o ./nupkgs
+
+      - name: Publish to NuGet.org
+        run: dotnet nuget push "./nupkgs/*.nupkg" --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_KEY }} --skip-duplicate
 
       - name: Publish to GitHub Packages
         run: |
           dotnet nuget add source "https://nuget.pkg.github.com/gunpal5/index.json" --name github --username gunpal5 --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
           dotnet nuget push "./nupkgs/*.nupkg" --source github --skip-duplicate
 
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.update.outputs.newVersion }}
+          name: v${{ steps.update.outputs.newVersion }}
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  commit-version:
+    name: Commit Version Bump
+    needs: [build-test-publish]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Bump version
+        uses: vers-one/dotnet-project-version-updater@v1.7
+        with:
+          file: |
+            "**/*.csproj", "**/*.nuspec", "**/AssemblyInfo.cs"
+          version: bump-build
+
+      - name: Commit and push
+        run: |
+          git config user.name "Gunpal Jain"
+          git config user.email "gunpal5@gmail.com"
+          git add .
+          git commit -m "Bump version to v${{ needs.build-test-publish.outputs.new_version }}"
+          git push
