--- a/.github/workflows/publish-github-packages.yml
+++ b/.github/workflows/publish-github-packages.yml
@@ -37,8 +37,11 @@ jobs:
       - name: Build
         run: dotnet build -c Release --no-restore
 
-      - name: Pack
-        run: dotnet pack -c Release --no-build -o ./nupkgs
+      - name: Pack (src projects only)
+        run: |
+          for project in src/**/*.csproj; do
+            dotnet pack "$project" -c Release --no-build -o ./nupkgs
+          done
 
       - name: Add GitHub Packages source
         run: dotnet nuget add source "https://nuget.pkg.github.com/gunpal5/index.json" --name github --username gunpal5 --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text
