--- a/samples/TwoWayAudioCommunicationWpf/TwoWayAudioCommunicationWpf.csproj
+++ b/samples/TwoWayAudioCommunicationWpf/TwoWayAudioCommunicationWpf.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\GenerativeAI.Live\GenerativeAI.Live.csproj" />
+      <ProjectReference Include="..\..\src\GenerativeAI.Tools\GenerativeAI.Tools.csproj" />
     </ItemGroup>
 
 </Project>
